@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.m3_online_database" name="M3 Online (Adatbázis)" version="1.0.2" provider-name="heg, vargalex">
+<addon id="plugin.video.m3_online_database" name="M3 Online (Adatbázis)" version="1.0.3" provider-name="heg, vargalex">
     <requires>
-        <import addon="script.module.beautifulsoup4" version="4.6.2"/>
         <import addon="script.module.requests" version="2.22.0"/>
-        <import addon="script.module.resolveurl" version="5.1.00"/>
         <import addon="xbmc.python" version="3.0.0"/>
-        <import addon="script.module.inputstreamhelper" version="0.4.3"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="default.py">
         <provides>video</provides>
@@ -16,8 +13,11 @@
         Köszönet Smithy fórumtársnak az adatbázisért!</description>
         <language>hu</language>
         <platform>all</platform>
-        <news> 
+        <news>
+            1.0.3 - Áttérés SQLite adatbázis használatára, lapozás a keresésben
             1.0.2 - Közvetlen CSV forrás használata json helyett
+            1.0.1 - Lapozás megvalósítása
+            1.0.0 - Első verzió
         </news>
         <assets>
             <icon>icon.png</icon>
